--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,6 +1,6 @@
 .container {
   max-width: 1440px;
-  margin-top: 120px;
+  margin-top: 48px;
   margin-right: auto;
   margin-bottom: 52px;
   margin-left: auto;
